implements css class based solution to scroll prevention on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -658,6 +658,10 @@ html, body {
         vertical-align: middle;
     }
 
+    .no-scroll {
+        overflow-x: hidden;
+    }
+
     .event-view {
         width: 100vw;
     }
